samples/_failures_safe/1761467984_efea75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89a63879.c: In function ‘main’:
./samples/SAFE/__tmp_89a63879.c:173:33: error: expected ‘]’ at end of input
  173 |     if (len > 0 && input[len - 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_89a63879.c:173:5: error: expected declaration or statement at end of input
  173 |     if (len > 0 && input[len - 1
      |     ^~
